<resources>
    <string name="app_name">Intents-01</string>
    <string name="edit_text">Write...</string>
    <string name="chb_bold">Bold</string>
    <string name="chb_giant_font">Giant Font</string>
    <string name="chb_tiny_font">Tiny Font</string>
    <string name="chb_red">Red</string>
    <string name="option_rock">Rock</string>
    <string name="option_paper">Paper</string>
    <string name="option_scissors">Scissors</string>
    <string name="option_play">Play</string>
    <string name="option_playagain">Play Again</string>
    <string name="play_won">You\'ve won!</string>
    <string name="play_lost">Too bad, you lost</string>
    <string name="play_tie">Tie</string>
</resources>